# upyoung_Automation_Test_Enginee_HW

./: README.md  pyproject.toml
HW1_Playwright Automation Test Challenge/: conftest.py  pyproject.toml
HW1_Playwright Automation Test Challenge/pages/: __init__.py  login_page.py
HW1_Playwright Automation Test Challenge/tests/: test_saucedemo.py
HW2_API Testing Challenge/: Upyoung_HW.postman_collection.json
pages/: cart_page.py  checkout_page.py  products_page.py
